# e2ectl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
e2ectl/: __init__.py  __main__.py  cli.py
e2ectl/discovery/: __init__.py  classifier.py  profiler.py  scanner.py
e2ectl/manifest/: __init__.py  interpolate.py  parser.py
e2ectl/models/: __init__.py  device.py  manifest.py  pairing.py
e2ectl/pairing/: __init__.py  engine.py  radar_ptz.py
e2ectl/reporting/: __init__.py  table.py
e2ectl/vapix/: __init__.py  client.py
examples/: radar-campus.yaml  retail-store.yaml  school-deterrence.yaml  warehouse-radar.yaml
tests/: test_classifier.py  test_cli.py  test_interpolate.py  test_manifest.py  test_radar_ptz.py  test_vapix_client.py
tests/fixtures/: radar-campus.yaml  retail-store.yaml
